--- a/registration.html
+++ b/registration.html
@@ -102,6 +102,29 @@
             <img id="wrong" src="images/error.png" style="visibility:hidden">	       
 	      </div>
 	</div>
+   
+   <div class="control-group">
+		<label class="control-label label1">Date of Birth</label>
+	      <div class="controls">
+	        <input type="date" id="dob" name="dob" required class="span2" >      
+	      </div>
+	</div>
+   
+  <div class="control-group">
+            <label class="control-label label1"> Gender </label>
+            <div class="controls">
+            <select class="span2" id="gender">
+            <option>Male</option>
+            <option>Female</option>
+            </select>
+            </div>
+            </div>
+    <div class="control-group">
+    <label class="control-label label1"> Profile Picture </label>
+    <div class="controls">
+    <input type="file" name="photo" id="photo" value="upload">
+    </div>
+    </div>
     	
 	<div class="control-group">
 	      <div class="controls">
