display page added

--- a/display.html
+++ b/display.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<link href="assets/css/bootstrap.css" rel="stylesheet">
 <meta charset="utf-8">
 <title>Untitled Document</title>
 <style type="text/css">
@@ -11,12 +12,20 @@
 	background-position: center center;
 }
 </style>
+<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+<script src="js/cookies.js"></script>
+<script src="js/display.js"></script>
 </head>
 
 <body>
 <div>
-hello
-
+<strong>Name :</strong> <p style="color:#603" id="fname"></p>
+<strong>Date of Birth :</strong> <p id="dob" style="color:#603"></p>
+<strong>Username :</strong> <p id="handle" style="color:#603"></p>
+<strong>Email :</strong> <p id="email" style="color:#603"></p>
+<strong>Gender :</strong> <p id="gender" style="color:#603"></p>
+            
 </div>
+
 </body>
 </html>
