--- a/display.html
+++ b/display.html
@@ -19,7 +19,7 @@
 
 <body>
 <div>
-<strong>Name :</strong> <p style="color:#603" id="fname"></p>
+<strong>Name :</strong> <p id="fname" style="color:#603"></p>
 <strong>Date of Birth :</strong> <p id="dob" style="color:#603"></p>
 <strong>Username :</strong> <p id="handle" style="color:#603"></p>
 <strong>Email :</strong> <p id="email" style="color:#603"></p>
