--- a/registration.html
+++ b/registration.html
@@ -59,7 +59,7 @@
               <span class="add-on">
               <i class="icon-user"></i>
               </span>
-	        <input type="text" class="input-xlarge" id="name" name="user_name" required>	        
+	        <input type="text" class="input-xlarge" id="name" name="name" required>	        
 	      </div>
 	</div>
 	
@@ -101,7 +101,7 @@
               <span class="add-on">
               <i class="icon-envelope"></i>
               </span>
-	        <input type="email" class="input-xlarge" id="email" name="user_email" required>
+	        <input type="email" class="input-xlarge" id="email" name="email" required>
 	      </div>
 	</div>
     
@@ -109,7 +109,7 @@
   <div class="control-group">
             <label class="control-label label1"> Gender </label>
             <div class="controls">
-            <select class="span2" id="gender">
+            <select class="span2" id="gender" name="gender">
             <option>Male</option>
             <option>Female</option>
             </select>
