--- a/registration.html
+++ b/registration.html
@@ -35,7 +35,7 @@
 <div class="offset2 span8 border-radius" style="background-color:rgba(229,229,229,0.25);border:thick;border-color:#F3C">
 <!--registration form-->
   <div class="span8">
-<form method="post" action="registration.php" enctype="multipart/form-data" class="form-horizontal" id="registerHere">
+<form method="post" action="reginsert.php" enctype="multipart/form-data" class="form-horizontal" id="registerHere">
     <div class="row">
     <div class="span2">
     <img src="images/card.png">
