probably final push

--- a/display.html
+++ b/display.html
@@ -29,7 +29,7 @@
 <div class="span3">
 <img src="" id="image" >
 </div>
-<div class="hero-unit offset1 span7">
+<div class="hero-unit span7">
 <div class="row">
 <div style="height:30px"></div>
 </div>
