--- a/login.html
+++ b/login.html
@@ -14,18 +14,18 @@
       body {
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #f5f5f5;
+        background-image:url(assets/img/bkgrnd.PNG);
       }
 
       .form-signin {
         max-width: 300px;
         padding: 19px 29px 29px;
         margin: 0 auto 20px;
-        background-color: #fff;
+        background-color: #CECECE;
         border: 1px solid #e5e5e5;
-        -webkit-border-radius: 5px;
-           -moz-border-radius: 5px;
-                border-radius: 5px;
+        -webkit-border-radius: 20px;
+           -moz-border-radius: 20px;
+                border-radius: 20px;
         -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
                 box-shadow: 0 1px 2px rgba(0,0,0,.05);
@@ -41,21 +41,38 @@
         margin-bottom: 15px;
         padding: 7px 9px;
       }
+	  
+	      .navbar-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      margin-top: 20px;
+      margin-bottom: -90px; 
+    }
+    .navbar-wrapper .navbar {
 
+    }
+    .navbar .navbar-inner {
+      border: 0;
+      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+         -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+              box-shadow: 0 2px 10px rgba(0,0,0,.25);
+    }
+    .navbar .brand {
+      padding: 14px 20px 16px;
+      font-size: 16px;
+      font-weight: bold;
+      text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+    }
+    .navbar .nav > li > a {
+      padding: 15px 20px;
+    }
+    .navbar .btn-navbar {
+      margin-top: 10px;
+    }
     </style>
-    <link rel="stylesheet" href="../assets/css/bootstrap-responsive.css">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link href="../assets/ico/apple-touch-icon-144-precomposed.png" sizes="144x144" rel="apple-touch-icon-precomposed">
-    <link href="../assets/ico/apple-touch-icon-114-precomposed.png" sizes="114x114" rel="apple-touch-icon-precomposed">
-      <link href="../assets/ico/apple-touch-icon-72-precomposed.png" sizes="72x72" rel="apple-touch-icon-precomposed">
-                    <link href="../assets/ico/apple-touch-icon-57-precomposed.png" rel="apple-touch-icon-precomposed">
-                                   <link href="../assets/ico/favicon.png" rel="shortcut icon">
 
 <script>
 var username="";
@@ -76,44 +93,49 @@ function login()
 				else
 				alert("wrong username or password");	
 }
-function handle_test() 
-{
-                /*var xhr = new XMLHttpRequest();
-				xhr.open('GET', 'registration.php?id='+username,false);
-				xhr.send(null);
-				var response = xhr.responseText;
-				console.log(response);
-				if(response == "present")
-				alert("this handle is already present");
-				else
-				alert("success");*/
-}
 </script>
 
                                    
   </head>
 
   <body>
-  
-  
-   <div class="container">
+      <div class="navbar-wrapper">
+      <div class="container">
+        <div class="navbar navbar-inverse">
+          <div class="navbar-inner">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#">headstart</a>
+            <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="registration.html">Register</a></li>
+                <li class="active"><a href="login.html">Login</a></li>
+                <li><a href="display.html">Profile</a></li>    
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div><!-- /.navbar-inner -->
+        </div><!-- /.navbar -->
+
+      </div> <!-- /.container -->
+    </div><!-- /.navbar-wrapper -->
+    <div class="row">
+    <div style="height:100px"></div>
+    </div>
       <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="text" id="handle" onBlur="handle_test();" placeholder="Handle" class="input-block-level">
-        <input type="password" id="password"  placeholder="Password" class="input-block-level">
+      <h2 class="form-signin-heading">sign in</h2>
+        <input type="text" id="handle" onBlur="handle_test();" placeholder="username" class="input-block-level">
+        <input type="password" id="password"  placeholder="password" class="input-block-level">
         <label class="checkbox">
           <input type="checkbox" id="cbox" value="remember-me"> Remember me
         </label>
         <button type="submit" class="btn btn-large btn-primary" onClick="login();">Sign in</button>
       </form>
+      </div>
 
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    
-
-  
-
-</body></html>
+</body>
+</html>
