--- a/registration.html
+++ b/registration.html
@@ -21,10 +21,61 @@
 	background-color:#CECECE;
 }
 
+    .navbar-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      margin-top: 20px;
+      margin-bottom: -90px; 
+    }
+    .navbar-wrapper .navbar {
+
+    }
+    .navbar .navbar-inner {
+      border: 0;
+      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+         -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+              box-shadow: 0 2px 10px rgba(0,0,0,.25);
+    }
+    .navbar .brand {
+      padding: 14px 20px 16px;
+      font-size: 16px;
+      font-weight: bold;
+      text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+    }
+    .navbar .nav > li > a {
+      padding: 15px 20px;
+    }
+    .navbar .btn-navbar {
+      margin-top: 10px;
+    }
 </style>
 </head>
 
 <body class="background">
+
+      <div class="navbar-wrapper">
+      <div class="container">
+        <div class="navbar navbar-inverse">
+          <div class="navbar-inner">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#">headstart</a>
+            <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li><a href="home.html">Home</a></li>
+                <li class="active"><a href="registration.html">Register</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="profile.html">Profile</a></li>    
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div><!-- /.navbar-inner -->
+        </div><!-- /.navbar -->
 
 <div class="container">
 <!--top margin of 50px-->
@@ -35,10 +86,10 @@
 <div class="offset2 span8 border-radius" style="background-color:rgba(229,229,229,0.25);border:thick;border-color:#F3C">
 <!--registration form-->
   <div class="span8">
-<form method="post" action="reginsert.php" enctype="multipart/form-data" class="form-horizontal" id="registerHere">
+<form class="form-horizontal" id="registerHere">
     <div class="row">
     <div class="span2">
-    <img src="images/card.png">
+    <img src="assets/img/Card.png">
     </div>
     <div class="span5">
     <div class="row" style="height:50%"> &nbsp;</div>
@@ -59,7 +110,7 @@
               <span class="add-on">
               <i class="icon-user"></i>
               </span>
-	        <input type="text" class="input-xlarge" id="name" name="name" required>	        
+	        <input type="text" class="input-xlarge" id="name" name="user_name" required>	        
 	      </div>
 	</div>
 	
@@ -101,7 +152,7 @@
               <span class="add-on">
               <i class="icon-envelope"></i>
               </span>
-	        <input type="email" class="input-xlarge" id="email" name="email" required>
+	        <input type="email" class="input-xlarge" id="email" name="user_email" required>
 	      </div>
 	</div>
     
@@ -109,7 +160,7 @@
   <div class="control-group">
             <label class="control-label label1"> Gender </label>
             <div class="controls">
-            <select class="span2" id="gender" name="gender">
+            <select class="span2" id="gender">
             <option>Male</option>
             <option>Female</option>
             </select>
@@ -164,8 +215,8 @@ document.getElementById("correct").style.visibility = "hidden";
 				}
 
 }
-/*/*verifying the details on button click*/
-/*--function check()
+/*verifying the details on button click*/
+function check()
 { 
 	if(handlecorrect)
 	{
@@ -178,7 +229,7 @@ document.getElementById("correct").style.visibility = "hidden";
 		handle = document.getElementById("handle").value;
 		var encoded = JSON.stringify(enc);
 					/*ajax call to verify handle correctness*/
-		  /*var xhr = new XMLHttpRequest();
+		  var xhr = new XMLHttpRequest();
 		  xhr.open('GET','reginsert.php?id='+handle+'&object='+encoded,false);
 		  xhr.send(null);
 		  var response = xhr.responseText;
@@ -190,7 +241,7 @@ document.getElementById("correct").style.visibility = "hidden";
 		  alert("error");
 	}
 }
-*/
+
 	  $(document).ready(function(){
 			$("#registerHere").validate({
 				rules:{
